--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "react-router-dom": "^6.11.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.1"
   }
 }
