--- a/Client/package.json
+++ b/Client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/slick-carousel": "^1.6.37",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.1"
